Home - Added the rest of the images in the categories section and changed the titles for the correct ones for each category. Aded the corresponding images in a new folder in images-home-course-galery. Added functionality to the jump down icon and a dummy section so it can jump there.

--- a/home/css/home.css
+++ b/home/css/home.css
@@ -221,6 +221,8 @@ h3 {
 
 .subcategory {
     /* width: 12rem; */
+    /* object-fit: scale-down; */
+    background-size: cover;
     height: 14.8125rem;
     border-style: none;
     border-radius: var(--borderRadius);
@@ -249,6 +251,8 @@ h3 {
 
 .category {
     /* width: 22.5rem; */
+    /* object-fit: scale-down; */
+    background-size: cover;
     height: 14.8125rem;
     border-style: none;
     border-radius: var(--borderRadius);
